--- a/src/Finance_tracker/Components/Authentications/login.css
+++ b/src/Finance_tracker/Components/Authentications/login.css
@@ -8,12 +8,12 @@
     width: 100%;
     height: 100%;
     padding: 50px 100px 50px 100px;
-    background-color: #bad0fa;    
+/*     background-color: #bad0fa;     */
 }
 .signin_page{
     width: 390px;
     height: 475px;
-    background-color: white;
+    background-color: #bad0fa;
     margin: auto;
     padding: 40px 60px;
     border-radius: 8px;
