--- a/src/Finance_tracker/Components/Authentications/login.css
+++ b/src/Finance_tracker/Components/Authentications/login.css
@@ -3,17 +3,16 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+  
 }
 .sign_cont{
     width: 100%;
-    height: 100%;
     padding: 50px 100px 50px 100px;
-/*     background-color: #bad0fa;     */
 }
 .signin_page{
     width: 390px;
     height: 475px;
-    background-color: #bad0fa;
+    background-color:#bad0fa;
     margin: auto;
     padding: 40px 60px;
     border-radius: 8px;
@@ -27,18 +26,19 @@
     flex-direction: column;
     gap: 29px;
     margin-top: 30px;
+    
 }
 .signin_fields input{
     height: 53px;
     width: 100%;
     padding-left: 20px;
-    border: 1px solid #9c9c9c;
     outline: none;
     color: #5c5c5c;
+    border: solid 1px;
+    border-radius: 7px;
     font-size: 18px;
 }
 .submit_cont{
-    /* display: flex; */
     justify-content: space-between;
     margin-top: 30px;
     width: 340px;
@@ -70,6 +70,6 @@
     font-size: 18px;
     margin-top: 5%;
     padding-right: 70px;
-    color: #5c5c5c;
-    /* font-weight: 600; */
+    color: #212d46;
+  
 }
