--- a/src/Finance_tracker/Components/Authentications/register.css
+++ b/src/Finance_tracker/Components/Authentications/register.css
@@ -7,12 +7,12 @@
 .login_container{
     width: 100%;
     padding: 50px 100px 50px 100px;
-    background-color: #bad0fa;
+    /* background-color: #bad0fa; */
 }
 .login{
     width: 390px;
     height: 475px;
-    background-color: white;
+    background-color: #bad0fa;
     margin: auto;
     padding: 40px 60px;
     border-radius: 11px;
@@ -31,10 +31,11 @@
     height: 40px;
     width: 100%;
     padding-left: 20px;
-    border: 1px solid #9c9c9c;
+    border: 1px solid ;
     outline: none;
     color: #5c5c5c;
     font-size: 18px;
+    border-radius: 7px;
 }
 .login .login-btn{
     width: 120px;
@@ -53,7 +54,7 @@
 }
 .login_acc{
     margin-top: 20px;
-    color: #5c5c5c;
+    color: #212d46;
     font-size: 18px;
     font-weight: 500;
 }
@@ -66,7 +67,7 @@
     align-items: center;
     margin-top: 25px;
     gap: 20px;
-    color: #5c5c5c;
+    color: #212d46;
     font-size: 18px;
     font-weight: 600;
 }
